--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prettier-plugin-gml",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Adds GML language support to Prettier",
   "main": "lib/index.js",
   "repository": {
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/TaylorAbraham/prettier-plugin-gml#readme",
   "dependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "2.0.5"
   }
 }
